--- a/lab1/sim/INCA_libs/history
+++ b/lab1/sim/INCA_libs/history
@@ -16,3 +16,4 @@ s11::(15Sep2022:16:00:08):( ncverilog tb_Top.sv ../src/Top_example.sv +access+rw
 s12::(15Sep2022:16:03:28):( ncverilog tb_Top.sv ../src/Top_example.sv +access+rw )
 s13::(15Sep2022:16:04:37):( ncverilog tb_Top.sv ../src/Top_example.sv +access+rw )
 s14::(15Sep2022:22:48:18):( ncverilog tb_Top.sv ../src/Top_example.sv +access+rw )
+s15::(16Sep2022:10:25:23):( ncverilog tb_Top.sv ./../src/Top.sv +access+rw )
