update testbench usage

--- a/lab2/src/INCA_libs/history
+++ b/lab2/src/INCA_libs/history
@@ -45,3 +45,24 @@ s40::(01Oct2022:22:20:17):( ncverilog +access+r tb_verilog/tb.sv Rsa256Core.sv R
 s41::(01Oct2022:22:20:34):( ncverilog +access+r tb_verilog/tb.sv Rsa256Core.sv RsaPrep.sv RsaMont.sv )
 s42::(01Oct2022:22:28:30):( ncverilog +access+r tb_verilog/tb.sv Rsa256Core.sv RsaPrep.sv RsaMont.sv )
 s43::(01Oct2022:22:32:58):( ncverilog +access+r tb_verilog/tb.sv Rsa256Core.sv RsaPrep.sv RsaMont.sv )
+s44::(02Oct2022:21:53:16):( ncverilog +access+rw RsaPrep.sv tb_verilog/tb_RsaPrep.sv )
+s45::(02Oct2022:21:54:45):( ncverilog +access+r RsaPrep.sv tb_verilog/tb_RsaPrep.sv )
+s46::(02Oct2022:21:55:28):( ncverilog +access+r RsaPrep.sv tb_verilog/tb_RsaPrep.sv )
+s47::(02Oct2022:21:56:18):( ncverilog +access+r RsaPrep.sv tb_verilog/tb_RsaPrep.sv )
+s48::(02Oct2022:21:57:50):( ncverilog +access+r Rsa256Core.sv tb_verilog/tb.sv )
+s49::(02Oct2022:21:59:55):( ncverilog +access+r tb_verilog/tb_RsaPrep.sv RsaPrep.sv )
+s50::(02Oct2022:22:00:42):( ncverilog +access+r tb_verilog/tb.sv Rsa256Core.sv )
+s51::(02Oct2022:22:02:07):( ncverilog +access+r tb.sv Rsa256Core.sv )
+s52::(02Oct2022:22:02:37):( ncverilog +access+r tb.sv Rsa256Core.sv )
+s53::(02Oct2022:22:03:44):( ncverilog +access+r tb.sv Rsa256Core.sv )
+s54::(02Oct2022:22:05:22):( ncverilog +access+r tb_Prep.sv RsaPrep.sv )
+s55::(02Oct2022:22:05:28):( ncverilog +access+r tb_RsaPrep.sv RsaPrep.sv )
+s56::(02Oct2022:22:06:22):( ncverilog +access+r tb_RsaPrep.sv RsaPrep.sv )
+s57::(02Oct2022:22:07:04):( ncverilog +access+r tb_RsaPrep.sv RsaPrep.sv )
+s58::(02Oct2022:22:09:27):( ncverilog +access+r tb_RsaPrep.sv RsaPrep.sv )
+s59::(02Oct2022:22:22:54):( ncverilog +access+r tb_RsaPrep.sv RsaPrep.sv )
+s60::(02Oct2022:22:25:28):( ncverilog +access+r tb_RsaPrep.sv RsaPrep.sv )
+s61::(02Oct2022:22:40:51):( ncverilog +access+r tb_RsaPrep.sv RsaPrep.sv )
+s62::(03Oct2022:22:21:04):( ncverilog +access+rw tb_RsaPrep.sv RsaPrep.sv )
+s63::(03Oct2022:22:24:35):( ncverilog +access+r tb_RsaPrep.sv RsaPrep.sv )
+s64::(03Oct2022:22:38:52):( ncverilog +access+r tb_RsaPrep.sv RsaPrep.sv )
