--- a/final/experiment/temp.ipynb
+++ b/final/experiment/temp.ipynb
@@ -21,7 +21,7 @@
     " \n",
     "# load the image and convert into\n",
     "# numpy array\n",
-    "img = Image.open('rings_crop.jpg')\n",
+    "img = Image.open('IMG_8201.jpeg')\n",
     " \n",
     "# asarray() class is used to convert\n",
     "# PIL images into NumPy arrays\n",
@@ -311,12 +311,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10 (default, Mar 15 2022, 12:22:08) \n[GCC 9.4.0]"
+   "version": "2.7.5 (default, Oct 14 2020, 14:45:30) \n[GCC 4.8.5 20150623 (Red Hat 4.8.5-44)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+    "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
    }
   }
  },
