--- a/final/experiment/temp.ipynb
+++ b/final/experiment/temp.ipynb
@@ -176,8 +176,7 @@
     "\n",
     "# do convolution\n",
     "conv_out = convolve2D(output_matrix, template_data)\n",
-    "print(conv_out.shape)\n",
-    "\n"
+    "print(conv_out.shape)\n"
    ]
   },
   {
@@ -227,71 +226,6 @@
     "            \n",
     "np.savetxt(\"dump1.txt\", output_matrix_2, fmt = \"%d\")\n",
     "np.savetxt(\"dump2.txt\", out_matr, fmt = \"%10d\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 217,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "unexpected EOF while parsing (628642438.py, line 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipykernel_14293/628642438.py\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    \u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
-     ]
-    }
-   ],
-   "source": [
-    "# fill in a table\n",
-    "count = np.zeros((200, 5)) \n",
-    "groups = 0\n",
-    "# first dim is used bit, second dim is valid \n",
-    "# 3rd and 4th dim is top x and left x\n",
-    "# 5th and 6th element is down y and right y.\n",
-    "# 200 groups are available in the beginning.\n",
-    "# we start from the 1st group, 0th group is treated as not in group.\n",
-    "tables = np.zeros(output_matrix_2.shape) #save corresponding group.\n",
-    "for i in range(1, output_matrix_2.shape[0]):\n",
-    "    for j in range(1, output_matrix_2.shape[1]): # omit first dim.\n",
-    "        if(output_matrix[i][j] != 0):\n",
-    "            if(tables[i-1][j-1]+tables[i-1][j]+tables[i-1][j+1]+tables[i][j-1] == 0):\n",
-    "                # create a new group\n",
-    "                groups+=1\n",
-    "                count[groups][0] = 1\n",
-    "                count[groups][1] = i\n",
-    "                count[groups][2] = j\n",
-    "                count[groups][3] = i\n",
-    "                count[groups][4] = j\n",
-    "            else:\n",
-    "                #some old group might exist\n",
-    "                #if those old groups conflict, the groups should merge\n",
-    "                # can be done by xor?\n",
-    "                tmp = 0\n",
-    "                conflict = 0\n",
-    "                if(tables[i-1][j-1] != 0):\n",
-    "                    tmp = tables[i-1][j-1]\n",
-    "                if(tables[i-1][j] != 0):\n",
-    "                    if(tmp != 0):\n",
-    "                        if(tables[i-1][j] != tmp):\n",
-    "                            conflict = 1\n",
-    "                    else:\n",
-    "                        tmp = tables[i-1][j]\n",
-    "                if(tables[i-1][j+1] != 0):\n",
-    "                    if(tmp != 0):\n",
-    "                        if(tables[i-1][j+1] != tmp):\n",
-    "                            conflict = 1\n",
-    "                    else:\n",
-    "                        tmp = tables[i-1][j+1]\n",
-    "                if(tables[i][j-1] != 0):\n",
-    "                    if(tmp != 0):\n",
-    "                        if(tables[i][j-1] != tmp):\n",
-    "                            conflict = 1\n",
-    "                    else:\n",
-    "                        tmp = tables[i][j-1]\n",
-    "                # tmp is the target \n",
-    "                # tmp is assigned with smaller index group"
    ]
   }
  ],
